Graphical fragments showing on Blender 2.71 and higher when baking. #42641

Closed
opened 2014-11-18 21:57:26 +01:00 by Thor Martin Flugheim · 12 comments

System Information
Operating system and graphics card

Blender Version
Broken: 2.72b 9e963ae
Worked: 2.70 and earlier.

Short description of error
Graphical fragments baked into textures while baking

Exact steps for others to reproduce the error

Steps for Blender 2.71 and higher:
Open file and click Bake.

Steps for Blender 2.70 and lower:
Open file and click on Bake.

2.70 will bake as intended. 2.71 will make graphical fragments into the bake. (purple frame in the example).

Note: Blender 2.72b is tested and still makes fragments.

pasteall_upload.blend

baked_blender_2.70.jpg

baked_blender_2.72.jpg

**System Information** Operating system and graphics card **Blender Version** Broken: 2.72b 9e963ae Worked: 2.70 and earlier. **Short description of error** Graphical fragments baked into textures while baking **Exact steps for others to reproduce the error** Steps for Blender 2.71 and higher: Open file and click Bake. Steps for Blender 2.70 and lower: Open file and click on Bake. 2.70 will bake as intended. 2.71 will make graphical fragments into the bake. (purple frame in the example). Note: Blender 2.72b is tested and still makes fragments. [pasteall_upload.blend](https://archive.blender.org/developer/F124729/pasteall_upload.blend) ![baked_blender_2.70.jpg](https://archive.blender.org/developer/F124730/baked_blender_2.70.jpg) ![baked_blender_2.72.jpg](https://archive.blender.org/developer/F124732/baked_blender_2.72.jpg)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @Tempus-1

Added subscriber: @Tempus-1

Added subscriber: @KHorseman

Added subscriber: @KHorseman

In my tests on this file it appeared that these "fragments" are a second image texture bleeding through. The material has two overlapping uv-mapped image textures, and these spots happen only in that overlap zone, and they appear to be the color of the underlying image (the wooden frame). They don't correspond directly to any faces as they are much smaller than the faces they occur on.

In my tests on this file it appeared that these "fragments" are a second image texture bleeding through. The material has two overlapping uv-mapped image textures, and these spots happen only in that overlap zone, and they appear to be the color of the underlying image (the wooden frame). They don't correspond directly to any faces as they are much smaller than the faces they occur on.
Dalai Felinto was assigned by Antonis Ryakiotakis 2014-11-20 13:53:45 +01:00

Added subscriber: @Psy-Fi

Added subscriber: @Psy-Fi

This one for Dalai!

This one for Dalai!
Dalai Felinto was unassigned by Sergey Sharybin 2014-12-26 11:06:38 +01:00
Bastien Montagne was assigned by Sergey Sharybin 2014-12-26 11:06:38 +01:00

Added subscribers: @mont29, @dfelinto, @Sergey

Added subscribers: @mont29, @dfelinto, @Sergey

No, it's not up to Dalai, it is up to @mont29 instead. Caused by 9b0ab89. I'm not sure why would epsilon need to be negative, his leads to wrong barycentric coordinates check making them less watertght.

No, it's not up to Dalai, it is up to @mont29 instead. Caused by 9b0ab89. I'm not sure why would epsilon need to be negative, his leads to wrong barycentric coordinates check making them less watertght.

This issue was referenced by cf178f71ac

This issue was referenced by cf178f71ac47453e635d5adc07b33a7539b9ac5e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit cf178f71ac.

Closed by commit cf178f71ac.

This issue was referenced by cde1351578

This issue was referenced by cde13515785d9cda89a559e33a4a553da65cde4b
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42641
No description provided.